# domus

./: .gitignore  README.md  pyproject.toml  start-backend.sh  start-frontend.sh
backend/: .env  .env.example  domus.db  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  domus_fridge.py  domus_orchestrator.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  database.py  debounce.py  event_bus.py  event_handlers.py  security.py
backend/app/models/: __init__.py  device.py  fridge_state.py  household.py  inventory.py  notification.py  user.py
backend/app/schemas/: __init__.py  inventory.py
backend/app/services/: __init__.py  blink_service.py  calendar_service.py  confidence_decay_service.py  instacart_service.py  notification_service.py  proactive_monitor.py  store_deals_service.py  temporal_comparison_service.py  vision_service.py
backend/storage/data/: blink_credentials.json
be/: .env.example  requirements.txt
be/app/: __init__.py  main.py
be/app/agents/: __init__.py  base.py  fridge_agent.py  orchestrator.py
domus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fe/: index.html  package-lock.json  package.json
fe/src/: App.tsx  main.tsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css
mcp/: README.md  __init__.py
shared/: __init__.py
shared/schemas/: __init__.py  events.py  state.py  storage.py
shared/types/: events.ts
(+55 files in other folders)
